# warble

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE  gabroo  kvstore.cc  kvstore.h  kvstore_service.cc  notes.md
func/: BUILD  functions.cc  functions.h  server.cc  server.h
kvstore/: BUILD  client.cc  client.h  db.h  kvstore.cc  kvstore.h  kvstore_server.cc  kvstore_server.h  kvstore_test.cc  server.cc  server.h  store.cc  store.h
proto-stuff/protos/: func.grpc.pb.h  func.pb.h  kvstore.grpc.pb.h  kvstore.pb.h  warble.pb.h
protos/: BUILD  func.proto  kvstore.proto  warble.proto
tests/: BUILD  funcs.cc  glog.BUILD  gtest.BUILD  kvstore.cc  kvstore_test.cc
warble/: BUILD  cli.cc  cli.h  functions.cc  functions.h  warble.cc
